--- a/Server/server-config.toml
+++ b/Server/server-config.toml
@@ -1,3 +1,4 @@
-SERVER_IP = '127.0.0.1'
-UDP_PORT_RANGE = '5000 - 6000'
-PORT= 23232
+[SERVER]
+IP = "127.0.0.1"
+UDP_PORT_RANGE = "5000 - 6000"
+PORT = 23232
