--- a/Server/server-config.toml
+++ b/Server/server-config.toml
@@ -1,6 +1,10 @@
-[SERVER]
-IP = "127.0.0.1"
-UDP_PORT_RANGE = "5000 - 6000"
-PORT = 23232
-[AUTH]
+[server]
+host = "127.0.0.1"
+udp_port_range = "5000 - 6000"
+port = 23232
+[ssl]
+enabled = false
+private_key = "./private.key"
+cert_chain = "./certchain.pem"
+[auth]
 TYPE = "file"
